[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=1]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/UserInterface/MainMenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/RetryButton.tscn" type="PackedScene" id=5]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 1649.73 ]
}

[node name="Timer" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -270.017
margin_top = 105.269
margin_right = -139.017
margin_bottom = 184.269
text = "Time: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTime" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -270.026
margin_top = 188.681
margin_right = -63.0256
margin_bottom = 267.681
text = "Best Time: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deaths" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -269.655
margin_top = 273.341
margin_right = -109.655
margin_bottom = 352.341
text = "Deaths: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.227451, 0.239216, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -73.0
margin_top = 161.038
margin_right = 73.0
margin_bottom = 240.038
text = " Paused! "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -343.5
margin_top = -138.0
margin_right = 343.5
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 3 )]
margin_right = 687.0
margin_bottom = 91.0

[node name="RetryButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 5 )]
margin_top = 95.0
margin_bottom = 180.0

[node name="Quit" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_top = 184.0
margin_right = 687.0
margin_bottom = 276.0
